# arcanefem

./: .gitignore  BSRMatrix.cc  BSRMatrix.h  CMakeLists.txt  README.md  get_stats_from_json.py
acoustics/: Acoustics.config  CMakeLists.txt  Fem.axl  FemModule.cc  FemModule.h  Test.sub.arc  Test.sub.hypre.arc
aerodynamics/: CMakeLists.txt  Fem.axl  FemModule.cc  Readme.md  Test.Joukowski.arc  aerodynamics.config  main.cc
bilaplacian/: AlephFemLinearSystem.cc  Bilaplacian.config  CMakeLists.txt  Fem.axl  Fem1.axl  Fem1Module.cc  FemLinearSystem.cc  FemLinearSystem.h  FemModule.cc  FemTest1.arc  FemTest1.config  FemUtils.cc  Readme.md  Result_good.txt  Test.Bilaplacian.arc  Test.Bilaplacian.direct.arc  Test.Bilaplacian.internal_pcg.arc  bilap.geo  bilap.msh  main.cc  plancher.geo  plancher_Coarse.msh  plancher_Coarse_FF.msh
elasticity/: CMakeLists.txt  Fem.axl  FemModule.cc  FemModule.h  Readme.md  Test.Elasticity.DirichletViaRowColumnElimination.arc  Test.Elasticity.DirichletViaRowElimination.arc  Test.Elasticity.PointDirichlet.arc  Test.Elasticity.arc  Test.Elasticity.traction.arc  Test.bar.DirichletViaRowElimination.arc  Test.bar.PointDirichlet.arc  Test.bar.traction.arc  Test.bar.traction.bodyforce.arc  Test.bar.traction.bodyforce.bsr.arc  Test.bar.traction.bsr.arc  bar.geo  bar.msh  main.cc
elastodynamics/: CMakeLists.txt  Elastodynamics.config  Fem.axl  FemModule.cc  Readme.md  Test.Elastodynamics.arc  Test.Elastodynamics.damping.arc  Test.Elastodynamics.dirichlet.traction.bodyforce.arc  Test.Elastodynamics.pointBC.arc  Test.Elastodynamics.transient-traction.arc  Test.bar.Galpha.arc  Test.bar.arc  Test.bar.damping.arc  Test.bar.dirichlet.traction.bodyforce.arc  Test.bar.transient-traction.arc  Test.semi-circle.pointBC.arc  traction_bar_test_1.txt
electrostatics/: CMakeLists.txt  Electrostatics.config  Fem.axl  FemModule.cc  FemModule.h  Readme.md  Test.Capacitor.arc  Test.Electrostatics.Capacitor.arc  Test.Electrostatics.arc  Test.Electrostatics.rod-circle.arc  Test.box-rods.arc  Test.rod-circle.arc  main.cc
fem1/: AlephFemLinearSystem2.cc  CMakeLists.txt  Fem1.axl  Fem1Module.cc  FemDoFsOnNodes.cc  FemDoFsOnNodes.h  FemLinearSystem.cc  FemLinearSystem2.cc  FemLinearSystem2.h  FemTest1.10k.arc  FemTest1.MultiMaterial.10k.arc  FemTest1.MultiMaterial.arc  FemTest1.arc  FemTest1.config  FemTest1.quad4.arc  FemUtils.cc  FemUtils.h  Readme.md  main.cc  multi-mat.geo  multi-material.msh  plancher.geo
femutils/: AlephDoFLinearSystem.cc  AlephDoFLinearSystemFactory.axl  AlephFemLinearSystem.cc  AlephFemLinearSystem2.cc  AlephNodeLinearSystem.cc  AlienDoFLinearSystem.cc  AlienDoFLinearSystemFactory.axl  ArcaneFemFunctions.cc  ArcaneFemFunctions.changed.h  ArcaneFemFunctions.h  ArcaneFemFunctionsGpu.cc  ArcaneFemFunctionsGpu.h  BSRFormat.cc  BSRFormat.h  BSRMatrix.cc  BSRMatrix.h  CMakeLists.txt  CooFormatMatrix.h  CsrDoFLinearSystemImpl.cc  CsrDoFLinearSystemImpl.h  CsrFormatMatrix.cc  CsrFormatMatrix.h  CsrFormatMatrixView.cc  CsrFormatMatrixView.h  DoFLinearSystem.cc  DoFLinearSystem.h  DoFLinearSystemImplBase.cc  FemBoundaryConditions.axl  FemBoundaryConditions.cc  FemDoFsOnCells.cc  FemDoFsOnCells.h  FemDoFsOnNodes.cc  FemDoFsOnNodes.h  FemLinearSystem.h  FemUtils.cc  FemUtils.h  FemUtilsGlobal.h  GaussDoFsOnCells.cc  GaussDoFsOnCells.h  GaussQuadrature.cc  (+18 more)
fourier/: CMakeLists.txt  ExternalFunctions.cs  Fem.axl  FemModule.cc  FemModule.h  Fourier.config  Readme.md  Test.conduction.10k.arc  Test.conduction.arc  Test.conduction.heterogeneous.10k.arc  Test.conduction.heterogeneous.arc  Test.conduction.quad4.arc  Test.manufacture.solution.arc  Test.maunfacture.solution.arc
heat/: CMakeLists.txt  Fem.axl  FemModule.cc  Readme.md  Test.conduction.DirichletViaRowColumnElimination.arc  Test.conduction.DirichletViaRowElimination.arc  Test.conduction.arc  Test.conduction.convection.arc  Test.conduction.convection.fine.arc  Test.conduction.fine.arc  main.cc  plate.geo  plate.msh
laplace/: CMakeLists.txt  Fem.axl  FemModule.cc  FemModule.h  Laplace.config  Readme.md  Test.L-shape.3D.arc  Test.L-shape.3D.bsr.arc  Test.L-shape.3D.bsr.atomicFree.arc  Test.PointDirichlet-refined.arc  Test.PointDirichlet.arc  Test.PointDirichlet.bsr.atomicFree.hypreDirect.arc  Test.PointDirichlet.bsr.hypreDirect.arc  Test.laplace.3D.arc  Test.laplace.PointDirichlet.10K.arc  Test.laplace.PointDirichlet.arc  Test.laplace.arc  Test.ring.arc  main.cc
mechanics/: CMakeLists.txt  Mechanics.axl  MechanicsModule.cc  MechanicsModule.h  Types.h  main.cc  utilFEM.h
passmo/: AlephFemLinearSystemDoF.cc  CMakeLists.txt  Elastodynamic.axl  ElastodynamicModule.cc  ElastodynamicModule.h  FemLinearSystem.cc  FemLinearSystemDoF.cc  FemLinearSystemDoF.h  FemUtils.cc  GaussDoFsOnCells.cc  GaussDoFsOnCells.h  GaussQuadrature.cc  GaussQuadrature.h  INodeDoFs.h  Integer3std.h  NodeDoFs.axl  NodeDoFs.cc  NodeDoFs.h  Passmo.arc  Passmo.config  Test.Passmo.arc  Test.Passmo.bar.arc  Test.Passmo.bar2d_hybridpar.arc  Test.Passmo.bardbg.arc  Test.Passmo.barq4dbg.arc  Test.Passmo.constant-traction.arc  Test.Passmo.dbg.arc  Test.Passmo.q4dbg.arc  Test.Passmo.t3dbg.arc  Test.Passmo.transient-traction.arc  Test.bar2d_tria.arc  TypesElastodynamic.h  analytic_func.cpp  analytical_func.h  bar_3D_hex_tetra_pyramids.msh  bardbg.msh  barq4dbg.geo  barq4dbg.msh  input_traction.txt  main.cc  (+12 more)
poission/: CMakeLists.txt  Fem.axl  Fem1.axl  FemModule.cc  L-shape.msh  Readme.md  Test.conduction.10k.arc  Test.conduction.arc  Test.conduction.heterogeneous.arc  Test.conduction.quad4.arc  Test.laplace.PointDirichlet.arc  Test.laplace.arc  Test.poisson.direct.arc  Test.poisson.petsc.arc  Test.poisson.trilinos.arc  ring.msh
poisson/: BlCsrBiliAssembly.cc  BlCsrBiliAssembly.hxx  BlcsrBiliAssembly.hxx  CMakeLists.txt  CooBiliAssembly.cc  CooBiliAssembly.hxx  CooGpuBiliAssembly.cc  CooSortBiliAssembly.cc  CooSortBiliAssembly.hxx  CooSortGpuBiliAssembly.cc  CsrBiliAssembly.cc  CsrBiliAssembly.hxx  CsrGpuBiliAssembly.cc  CsrGpuBiliAssembly.hxx  CusparseBiliAssembly.hxx  DokBiliAssembly.cc  Fem.axl  FemModule.cc  FemModule.h  FemTest.config  Readme.md  (+65 more)
(+906 files in other folders)
